overflow x fixed

--- a/style/init.css
+++ b/style/init.css
@@ -5,18 +5,20 @@
   text-decoration: none;
   color: black;
   list-style-type: none;
-  overflow-x: visible;
 }
 
 body{
+  max-width: 100%;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: minmax(100px, auto);
   grid-gap: 10px;
+  overflow-x: hidden;
 }
 
-.body > *{
-  max-width: 100%;
+body > *{
+  max-width: 95%;
+  overflow-x: hidden;
 }
 
 div{
